MathGL2 CMake updates.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,11 +108,11 @@ if (NOT NO_CFITSIO)
 endif()
 
 if(NOT NO_MATHGL)
-  FIND_PACKAGE(MathGL 1.10 COMPONENTS Qt)
+  FIND_PACKAGE(MathGL2 1.10 COMPONENTS Qt)
 endif()
 
 if(NOT NO_QT)
-  FIND_PACKAGE(Qt4)
+  FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Widgets)
 endif()
 
 if (TR1_UNORDERED_MAP_FOUND)
@@ -301,16 +301,16 @@ else()
   message(STATUS "     Specify its path with  'cmake [...] -DGSL_DIR=<PATH/TO/GSL>'.")
 endif()
 
-if (MATHGL_QT_FOUND)
+if (MATHGL_QT_FOUND OR MATHGL2_QT_FOUND)
   message(STATUS "   * MATHGL with Qt support was found.")
 else()
-  if(MATHGL_FOUND)
+  if(MATHGL_FOUND OR MATHGL2_FOUND)
     message(STATUS "   * MATHGL was found but Qt support is missing.")
     message(STATUS "     You can try installing the version present in the '/external' directory of disperse.")
     message(STATUS "     Don't forget to enable QT using './configure --enable-qt'.")
-  else(MATHGL_FOUND)
+  else(MATHGL_FOUND OR MATHGL2_FOUND)
     message(STATUS "   * MATHGL was NOT found.")
-  endif(MATHGL_FOUND)
+  endif(MATHGL_FOUND OR MATHGL2_FOUND)
   message(STATUS "     This library is needed to build 'pdview'.")
   message(STATUS "     You will not be able to view persistence diagrams.")
   message(STATUS "     You can try installing the version present in the '/external' directory of disperse.")
@@ -319,7 +319,7 @@ else()
 endif()
 
 if (QT_FOUND)
-  message(STATUS "   * QT4 was found.")
+  message(STATUS "   * QT was found.")
 else()
   message(STATUS "   * Qt was NOT found.")
   message(STATUS "     This library is needed to build 'pdview'.")
