Update Pdview for QT5

--- a/src/pdview/CMakeLists.txt
+++ b/src/pdview/CMakeLists.txt
@@ -3,8 +3,7 @@ set(MSE_DIR "${PROJECT_SOURCE_DIR}/src/mse/")
 include_directories(${C_DIR})
 include_directories(${MSE_DIR})
 
-if(MATHGL_QT_FOUND AND QT_FOUND)
-  INCLUDE( ${QT_USE_FILE} )
+if((MATHGL_QT_FOUND AND QT_FOUND) OR (MATHGL2_QT_FOUND AND Qt5Core_FOUND))
   
   SET( PDVIEW_SRCS
     pdview.cpp
@@ -40,17 +39,19 @@ if(MATHGL_QT_FOUND AND QT_FOUND)
   SET( PDVIEW_RCS
     help.qrc
     )
-  
+
   # enable warnings
   ADD_DEFINITIONS( -Wall )
-  INCLUDE( ${QT_USE_FILE} )
-  QT4_ADD_RESOURCES( PDVIEW_RC_SRCS ${PDVIEW_RCS} )
-  QT4_WRAP_UI( PDVIEW_UI_HDRS ${PDVIEW_UIS} )
-  QT4_WRAP_CPP( PDVIEW_MOC_SRCS ${PDVIEW_MOC_HDRS} )
+  QT5_ADD_RESOURCES( PDVIEW_RC_SRCS ${PDVIEW_RCS} )
+  QT5_WRAP_UI( PDVIEW_UI_HDRS ${PDVIEW_UIS} )
+  QT5_WRAP_CPP( PDVIEW_MOC_SRCS ${PDVIEW_MOC_HDRS} )
   INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR})
   
   ADD_EXECUTABLE( pdview ${PDVIEW_SRCS} ${PDVIEW_MOC_SRCS} ${PDVIEW_RC_SRCS} ${PDVIEW_UI_HDRS} )
-  TARGET_LINK_LIBRARIES( pdview ${QT_LIBRARIES} ${MATHGL_LIBRARIES} )
+  TARGET_LINK_LIBRARIES( pdview
+    Qt5::Widgets
+    Qt5::GUI
+    ${MATHGL_LIBRARIES} )
 
 #  if(GSL_FOUND)
 #    target_link_libraries(pdview ${GSL_LIBRARIES})
@@ -62,6 +63,6 @@ else()
   SET( NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} pdview PARENT_SCOPE)
   SET( DISABLED_FEATURES_LIST_LOC ${DISABLED_FEATURES_LIST_LOC} mse:interactive)
 
-endif(MATHGL_QT_FOUND AND QT_FOUND)
+endif((MATHGL_QT_FOUND AND QT_FOUND) OR (MATHGL2_QT_FOUND AND Qt5Core_FOUND))
 
 SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)
