QT5 updates for Pdview

--- a/src/pdview/CMakeLists.txt
+++ b/src/pdview/CMakeLists.txt
@@ -49,8 +49,9 @@ if((MATHGL_QT_FOUND AND QT_FOUND) OR (MATHGL2_QT_FOUND AND Qt5Core_FOUND))
   
   ADD_EXECUTABLE( pdview ${PDVIEW_SRCS} ${PDVIEW_MOC_SRCS} ${PDVIEW_RC_SRCS} ${PDVIEW_UI_HDRS} )
   TARGET_LINK_LIBRARIES( pdview
+    Qt5::Core
     Qt5::Widgets
-    Qt5::GUI
+    Qt5::Gui
     ${MATHGL_LIBRARIES} )
 
 #  if(GSL_FOUND)
