Link MATHGL2_LIBRARIES. One more linker error with mgl_data_to_string

--- a/src/pdview/CMakeLists.txt
+++ b/src/pdview/CMakeLists.txt
@@ -48,11 +48,14 @@ if((MATHGL_QT_FOUND AND QT_FOUND) OR (MATHGL2_QT_FOUND AND Qt5Core_FOUND))
   INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR})
   
   ADD_EXECUTABLE( pdview ${PDVIEW_SRCS} ${PDVIEW_MOC_SRCS} ${PDVIEW_RC_SRCS} ${PDVIEW_UI_HDRS} )
+
+  message("${MATHGL_LIBRARIES} or ${MATHGL2_LIBRARIES}")
   TARGET_LINK_LIBRARIES( pdview
+    ${MATHGL2_LIBRARIES}
+    ${MATHGL_LIBRARIES}
     Qt5::Core
     Qt5::Widgets
-    Qt5::Gui
-    ${MATHGL_LIBRARIES} )
+    Qt5::Gui )
 
 #  if(GSL_FOUND)
 #    target_link_libraries(pdview ${GSL_LIBRARIES})
